<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/btnWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtWifi" />

    <Button
        android:id="@+id/btnBth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBTH" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGo" />

    <TextView
        android:id="@+id/txtMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F57F17"
        android:gravity="center_horizontal"
        android:text="@string/txtMain"
        android:textColor="#5E35B1"
        android:textSize="40sp" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/txtOpenClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtOpenClose" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/txtBthOnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBthOnOff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="210sp"
            android:layout_height="match_parent">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

</LinearLayout>